--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/75d63cf3eb.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -47,6 +48,12 @@
           </li>
           <li class="nav_menu_item">
             <a href="#FAQs" class="nav_menu_link">FAQ</a>
+          </li>
+          <li class="nav_menu_item">
+            <a href="#" class="nav_menu_link"><i class="fa-brands fa-discord"></i></a>
+          </li>
+          <li class="nav_menu_item">
+            <a href="#" class="nav_menu_link"><i class="fa-brands fa-twitter"></i></a>
           </li>
         </ul>
       </div>
@@ -264,7 +271,19 @@
 
   </div>
 
-  <footer></footer>
+  <footer>
+    <div class="footer">
+      <div class="leftsection">
+        <h2>© 2022, The Residents</h2>
+        <p></p>
+      </div>
+      <div class="rightsection">
+        <h2 style="padding-bottom: 10px;">Follow us</h2>
+        <a href="#" class="nav_menu_link"><i class="fa-brands fa-twitter fa-xl"></i></a>
+        <a href="#" class="nav_menu_link"><i class="fa-brands fa-discord fa-xl"></i></a>
+      </div>
+    </div>
+  </footer>
 
   <!-- ==== ANIMATE ON SCROLL JS CDN -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
