--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <!-- ==== ANIMATE ON SCROLL CSS CDN  ==== -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
   <script src="https://kit.fontawesome.com/75d63cf3eb.js" crossorigin="anonymous"></script>
 </head>
 
@@ -44,7 +44,10 @@
             <a href="#roadmapWhole" class="nav_menu_link">Roadmap</a>
           </li>
           <li class="nav_menu_item">
-            <a href="#utilitiessection" class="nav_menu_link">Utilities</a>
+            <a href="#utilitiessection" class="nav_menu_link">Utility</a>
+          </li>
+          <li class="nav_menu_item">
+            <a href="#collectionsection" class="nav_menu_link">Collection</a>
           </li>
           <li class="nav_menu_item">
             <a href="#FAQs" class="nav_menu_link">FAQ</a>
@@ -68,15 +71,14 @@
     <div class="container">
       <div class="grid-cols-2">
         <div class="grid-item-1">
-          <h1 class="main-heading">
-            <span>The Residents.</span>
-            <br />
-            Start of new era
-          </h1>
+          <h1 class="main-heading">The Residents</h1> <br>
+          <p class="main-heading-p">The first Art Residency project that produces 1/1 digital art with a profit-sharing
+            mechanism</p>
+
           <p class="info-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sapiente quae ipsum maiores veritatis nesciunt,
-            ipsam, inventore itaque corporis iusto et nihil? Esse provident eaque, adipisci libero inventore expedita
-            amet.
+            We are a genesis collection of 5555 hand drawn digital artworks representing human emotions.
+            Each resident grants its holder exclusive access to be a part of Art Residencies and shape the future of
+            digital art
           </p>
 
           <div class="btn_wrapper">
@@ -101,83 +103,87 @@
       <h1 class="roadmapheading">Roadmap</h1>
       <div class="quarterDiv">
         <img class="quarterImg" src="./img/nfttest.jpeg" alt="">
-        <h2 class="quarterHeading">Q1 - February</h2>
-        <p class="quarterText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ab enim magnam ipsa
-          sequi? Ea minus labore illo similique! Natus, voluptatum autem aliquid animi accusamus minus vitae soluta
-          optio
-          dolore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore iure at dignissimos animi cumque
-          recusandae fugiat nesciunt adipisci tempora. Consectetur incidunt totam eligendi corporis iste. Enim quis
-          qui
-          ullam! Deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci, explicabo eligendi
-          accusantium assumenda autem sapiente laboriosam alias dolorem vel, molestias iure soluta quibusdam? Quis
-          voluptatem obcaecati sunt dolorum quo? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quia
-          totam
-          ut minus quaerat natus impedit delectus quibusdam ratione vitae illo ab eveniet, vero voluptatem nobis
-          reprehenderit, excepturi unde laboriosam?</p>
+        <h2 class="quarterHeading">Q2 - 2022</h2>
+        <ul class="quarterText">
+          <li><i class="fa-solid fa-square-check"></i> Launching Twitter, Discord and Website</li>
+          <li><i class="fa-regular fa-square-check"></i> Conducting widespread promotion campaigns</li>
+          <li><i class="fa-regular fa-square-check"></i> Partnership with other projects</li>
+          <li><i class="fa-regular fa-square-check"></i> Announcement of Royal List</li>
+        </ul>
       </div>
       <div class="quarterDiv">
         <img class="quarterImg" src="./img/nfttest.jpeg" alt="">
-        <h2 class="quarterHeading">Q2 - February</h2>
-        <p class="quarterText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ab enim magnam ipsa
-          sequi? Ea minus labore illo similique! Natus, voluptatum autem aliquid animi accusamus minus vitae soluta
-          optio
-          dolore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore iure at dignissimos animi cumque
-          recusandae fugiat nesciunt adipisci tempora. Consectetur incidunt totam eligendi corporis iste. Enim quis
-          qui
-          ullam! Deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci, explicabo eligendi
-          accusantium assumenda autem sapiente laboriosam alias dolorem vel, molestias iure soluta quibusdam? Quis
-          voluptatem obcaecati sunt dolorum quo? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quia
-          totam
-          ut minus quaerat natus impedit delectus quibusdam ratione vitae illo ab eveniet, vero voluptatem nobis
-          reprehenderit, excepturi unde laboriosam?</p>
+        <h2 class="quarterHeading">Q3 - 2022</h2>
+        <ul class="quarterText">
+          <li><i class="fa-regular fa-square-check"></i> Minting - The launch of The Residents</li>
+          <li><i class="fa-regular fa-square-check"></i> Launch of Decentralized Autonomous Organization (DAO)</li>
+          <li><i class="fa-regular fa-square-check"></i> Selection process for Art Residency</li>
+        </ul>
       </div>
       <div class="quarterDiv">
         <img class="quarterImg" src="./img/nfttest.jpeg" alt="">
-        <h2 class="quarterHeading">Q3 - February</h2>
-        <p class="quarterText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ab enim magnam ipsa
-          sequi? Ea minus labore illo similique! Natus, voluptatum autem aliquid animi accusamus minus vitae soluta
-          optio
-          dolore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore iure at dignissimos animi cumque
-          recusandae fugiat nesciunt adipisci tempora. Consectetur incidunt totam eligendi corporis iste. Enim quis
-          qui
-          ullam! Deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci, explicabo eligendi
-          accusantium assumenda autem sapiente laboriosam alias dolorem vel, molestias iure soluta quibusdam? Quis
-          voluptatem obcaecati sunt dolorum quo? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quia
-          totam
-          ut minus quaerat natus impedit delectus quibusdam ratione vitae illo ab eveniet, vero voluptatem nobis
-          reprehenderit, excepturi unde laboriosam?</p>
-      </div>
-      <div class="quarterDiv">
-        <img class="quarterImg" src="./img/nfttest.jpeg" alt="">
-        <h2 class="quarterHeading">Q4 - February</h2>
-        <p class="quarterText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ab enim magnam ipsa
-          sequi? Ea minus labore illo similique! Natus, voluptatum autem aliquid animi accusamus minus vitae soluta
-          optio
-          dolore. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore iure at dignissimos animi cumque
-          recusandae fugiat nesciunt adipisci tempora. Consectetur incidunt totam eligendi corporis iste. Enim quis
-          qui
-          ullam! Deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci, explicabo eligendi
-          accusantium assumenda autem sapiente laboriosam alias dolorem vel, molestias iure soluta quibusdam? Quis
-          voluptatem obcaecati sunt dolorum quo? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quia
-          totam
-          ut minus quaerat natus impedit delectus quibusdam ratione vitae illo ab eveniet, vero voluptatem nobis
-          reprehenderit, excepturi unde laboriosam?</p>
+        <h2 class="quarterHeading">Q4 - 2022</h2>
+        <ul class="quarterText">
+          <li><i class="fa-regular fa-square-check"></i> Holding first Art Residency event</li>
+          <li><i class="fa-regular fa-square-check"></i> Distribution of profits to holders</li>
+          <li><i class="fa-regular fa-square-check"></i> Merchandising</li>
+        </ul>
       </div>
     </section>
   </section>
 
   <section class="wrapper" id="utilitiessection">
     <section class="utilitiessection container" data-aos="fade-up" data-aos-duration="1000">
-      <h1 class="utilitiesheading">Utilities</h1>
+      <h1 class="utilitiesheading">Utility</h1>
       <div class="utilitiesdiv">
-        <img src="./img/nfttest.jpeg" alt="nft">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum tenetur ipsa pariatur facilis nesciunt
-          laboriosam, magni sunt eaque esse veniam. Totam veritatis commodi neque eum dolor! Nesciunt sunt soluta vitae?
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae ipsum a similique unde eos? Eveniet
-          temporibus necessitatibus ipsam ab qui tempore labore possimus accusantium quisquam sequi? Totam dolorum et
-          possimus? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, neque! Voluptatum, commodi earum?
-          Nam explicabo totam voluptas adipisci voluptate omnis sit. Voluptate minus facilis maiores quis ab laboriosam
-          magnam atque.</p>
+        <img class="utilitiesimg" src="./img/nfttest.jpeg" alt="nft">
+        <p>
+          The main utitily of project is Art Residency. There are many digital artists out there who are working solo.
+          We will gather talented digital artists together, create an environment where they can share their experience,
+          inspire each other and create their own artworks. These are the events called Art Residencies.
+          Our Art Residencies will offer a temporary paradise for artists. Our team will bring artists together where
+          they are away from the distractions of everyday life. Attendees will get to meet other passionate, creative
+          artists and spend their days devoted to their work.
+
+          How does the process work? Holders of our collection will be able to nominate their own or another artist`s
+          artwork for preliminary selection. Our DAO will vote for a certain number of artworks, and artists of selected
+          ones will get a chance to attend our Art Residency.
+          During the Art Residency, we will be creating all the necessary conditions for the artists to work together
+          and unleash their own potential to create new digital artworks. After the art residency, we will conduct the
+          sale of the created artworks.
+          he funds raised from the sale of these original artworks will be distributed among holders of our collection,
+          artists, project, and DAO itself. Holders or their nominees who attended the Art Residency will get additional
+          rewards and commission from the sales.</p>
+      </div>
+    </section>
+  </section>
+
+  <section class="wrapper" id="collectionsection">
+    <section class="utilitiessection container" data-aos="fade-up" data-aos-duration="1000">
+      <h1 class="utilitiesheading">Collection</h1>
+      <div class="utilitiesdiv">
+        <p>
+          The main utitily of project is Art Residency. There are many digital artists out there who are working solo.
+          We will gather talented digital artists together, create an environment where they can share their
+          experience,
+          inspire each other and create their own artworks. These are the events called Art Residencies.
+          Our Art Residencies will offer a temporary paradise for artists. Our team will bring artists together where
+          they are away from the distractions of everyday life. Attendees will get to meet other passionate, creative
+          artists and spend their days devoted to their work.
+
+          How does the process work? Holders of our collection will be able to nominate their own or another artist`s
+          artwork for preliminary selection. Our DAO will vote for a certain number of artworks, and artists of
+          selected
+          ones will get a chance to attend our Art Residency.
+          During the Art Residency, we will be creating all the necessary conditions for the artists to work together
+          and unleash their own potential to create new digital artworks. After the art residency, we will conduct the
+          sale of the created artworks.
+          he funds raised from the sale of these original artworks will be distributed among holders of our
+          collection,
+          artists, project, and DAO itself. Holders or their nominees who attended the Art Residency will get
+          additional
+          rewards and commission from the sales.</p>
+        <img src="./img/nfttest.jpeg" class="collectionimg" alt="nft">
       </div>
     </section>
   </section>
