--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <a href="#" class="nav_menu_link">About</a>
           </li>
           <li class="nav_menu_item">
-            <a href="#roadmapWhole" class="nav_menu_link">Roadmap</a>
+            <a href="#collectionsection" class="nav_menu_link">Collection</a>
           </li>
           <li class="nav_menu_item">
             <a href="#utilitiessection" class="nav_menu_link">Utility</a>
           </li>
           <li class="nav_menu_item">
-            <a href="#collectionsection" class="nav_menu_link">Collection</a>
+            <a href="#roadmapWhole" class="nav_menu_link">Roadmap</a>
           </li>
           <li class="nav_menu_item">
             <a href="#FAQs" class="nav_menu_link">FAQ</a>
@@ -91,71 +91,11 @@
         </div>
         <div class="grid-item-2">
           <div class="team_img_wrapper">
-            <img src="./img/nfttest.jpeg" alt="team-img" />
+            <!-- <img src="./img/nfttest.jpeg" alt="team-img" /> -->
           </div>
         </div>
       </div>
     </div>
-  </section>
-
-  <section class="wrapper" id="roadmapWhole">
-    <section class="roadmapWhole container" data-aos="fade-up" data-aos-duration="1000">
-      <h1 class="roadmapheading">Roadmap</h1>
-      <div class="quarterDiv">
-        <img class="quarterImg" src="./img/nfttest.jpeg" alt="">
-        <h2 class="quarterHeading">Q2 - 2022</h2>
-        <ul class="quarterText">
-          <li><i class="fa-solid fa-square-check"></i> Launching Twitter, Discord and Website</li>
-          <li><i class="fa-regular fa-square-check"></i> Conducting widespread promotion campaigns</li>
-          <li><i class="fa-regular fa-square-check"></i> Partnership with other projects</li>
-          <li><i class="fa-regular fa-square-check"></i> Announcement of Royal List</li>
-        </ul>
-      </div>
-      <div class="quarterDiv">
-        <img class="quarterImg" src="./img/nfttest.jpeg" alt="">
-        <h2 class="quarterHeading">Q3 - 2022</h2>
-        <ul class="quarterText">
-          <li><i class="fa-regular fa-square-check"></i> Minting - The launch of The Residents</li>
-          <li><i class="fa-regular fa-square-check"></i> Launch of Decentralized Autonomous Organization (DAO)</li>
-          <li><i class="fa-regular fa-square-check"></i> Selection process for Art Residency</li>
-        </ul>
-      </div>
-      <div class="quarterDiv">
-        <img class="quarterImg" src="./img/nfttest.jpeg" alt="">
-        <h2 class="quarterHeading">Q4 - 2022</h2>
-        <ul class="quarterText">
-          <li><i class="fa-regular fa-square-check"></i> Holding first Art Residency event</li>
-          <li><i class="fa-regular fa-square-check"></i> Distribution of profits to holders</li>
-          <li><i class="fa-regular fa-square-check"></i> Merchandising</li>
-        </ul>
-      </div>
-    </section>
-  </section>
-
-  <section class="wrapper" id="utilitiessection">
-    <section class="utilitiessection container" data-aos="fade-up" data-aos-duration="1000">
-      <h1 class="utilitiesheading">Utility</h1>
-      <div class="utilitiesdiv">
-        <img class="utilitiesimg" src="./img/nfttest.jpeg" alt="nft">
-        <p>
-          The main utitily of project is Art Residency. There are many digital artists out there who are working solo.
-          We will gather talented digital artists together, create an environment where they can share their experience,
-          inspire each other and create their own artworks. These are the events called Art Residencies.
-          Our Art Residencies will offer a temporary paradise for artists. Our team will bring artists together where
-          they are away from the distractions of everyday life. Attendees will get to meet other passionate, creative
-          artists and spend their days devoted to their work.
-
-          How does the process work? Holders of our collection will be able to nominate their own or another artist`s
-          artwork for preliminary selection. Our DAO will vote for a certain number of artworks, and artists of selected
-          ones will get a chance to attend our Art Residency.
-          During the Art Residency, we will be creating all the necessary conditions for the artists to work together
-          and unleash their own potential to create new digital artworks. After the art residency, we will conduct the
-          sale of the created artworks.
-          he funds raised from the sale of these original artworks will be distributed among holders of our collection,
-          artists, project, and DAO itself. Holders or their nominees who attended the Art Residency will get additional
-          rewards and commission from the sales.</p>
-      </div>
-    </section>
   </section>
 
   <section class="wrapper" id="collectionsection">
@@ -172,19 +112,64 @@
           artists and spend their days devoted to their work.
 
           How does the process work? Holders of our collection will be able to nominate their own or another artist`s
-          artwork for preliminary selection. Our DAO will vote for a certain number of artworks, and artists of
-          selected
-          ones will get a chance to attend our Art Residency.
-          During the Art Residency, we will be creating all the necessary conditions for the artists to work together
-          and unleash their own potential to create new digital artworks. After the art residency, we will conduct the
-          sale of the created artworks.
-          he funds raised from the sale of these original artworks will be distributed among holders of our
-          collection,
-          artists, project, and DAO itself. Holders or their nominees who attended the Art Residency will get
-          additional
-          rewards and commission from the sales.</p>
-        <img src="./img/nfttest.jpeg" class="collectionimg" alt="nft">
+          artwork for preliminary selection.
+        </p>
+        <img src="./img/test.png" class="collectionimg" alt="nft">
       </div>
+    </section>
+  </section>
+
+  <section class="wrapper" id="utilitiessection">
+    <section class="utilitiessection container" data-aos="fade-up" data-aos-duration="1000">
+      <h1 class="utilitiesheading">Utility</h1>
+      <div class="utilitiesdiv">
+        <img class="utilitiesimg" src="./img/test.png" alt="nft">
+        <p>
+          The main utitily of project is Art Residency. There are many digital artists out there who are working solo.
+          We will gather talented digital artists together, create an environment where they can share their experience,
+          inspire each other and create their own artworks. These are the events called Art Residencies.
+          Our Art Residencies will offer a temporary paradise for artists. Our team will bring artists together where
+          they are away from the distractions of everyday life. Attendees will get to meet other passionate, creative
+          artists and spend their days devoted to their work.
+
+          How does the process work? Holders of our collection will be able to nominate their own or another artist`s
+          artwork for preliminary selection.</p>
+      </div>
+    </section>
+  </section>
+
+  <section class="wrapper" id="roadmapWhole">
+    <section class="roadmapWhole container" data-aos="fade-up" data-aos-duration="1000">
+      <h1 class="roadmapheading" style="margin-bottom: 1000px;">Roadmap</h1>
+
+      <!-- <div class="quarterDiv">
+        <img class="quarterImg" src="./img/test.png" alt="">
+        <h2 class="quarterHeading">Q2 - 2022</h2>
+        <ul class="quarterText">
+          <li><i class="fa-solid fa-square-check"></i> Launching Twitter, Discord and Website</li>
+          <li><i class="fa-regular fa-square-check"></i> Conducting widespread promotion campaigns</li>
+          <li><i class="fa-regular fa-square-check"></i> Partnership with other projects</li>
+          <li><i class="fa-regular fa-square-check"></i> Announcement of Royal List</li>
+        </ul>
+      </div>
+      <div class="quarterDiv">
+        <img class="quarterImg" src="./img/test.png" alt="">
+        <h2 class="quarterHeading">Q3 - 2022</h2>
+        <ul class="quarterText">
+          <li><i class="fa-regular fa-square-check"></i> Minting - The launch of The Residents</li>
+          <li><i class="fa-regular fa-square-check"></i> Launch of Decentralized Autonomous Organization (DAO)</li>
+          <li><i class="fa-regular fa-square-check"></i> Selection process for Art Residency</li>
+        </ul>
+      </div>
+      <div class="quarterDiv">
+        <img class="quarterImg" src="./img/test.png" alt="">
+        <h2 class="quarterHeading">Q4 - 2022</h2>
+        <ul class="quarterText">
+          <li><i class="fa-regular fa-square-check"></i> Holding first Art Residency event</li>
+          <li><i class="fa-regular fa-square-check"></i> Distribution of profits to holders</li>
+          <li><i class="fa-regular fa-square-check"></i> Merchandising</li>
+        </ul>
+      </div> -->
     </section>
   </section>
 
